--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx,.astro --fix"
   },
   "dependencies": {
-    "astro": "^5.13.11"
+    "astro": "^5.13.11",
+    "dexie": "^4.2.0",
+    "diff": "^8.0.2",
+    "fuse.js": "^7.1.0",
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "@astrojs/react": "^4.3.1",
