--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dexie": "^4.2.0",
     "diff": "^8.0.2",
     "fuse.js": "^7.1.0",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "react-compiler-runtime": "^19.1.0-rc.3"
   },
   "devDependencies": {
     "@astrojs/react": "^4.3.1",
@@ -34,6 +35,7 @@
     "@typescript-eslint/parser": "^8.44.1",
     "astro-eslint-parser": "^1.2.2",
     "autoprefixer": "^10.4.21",
+    "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.3.1",
