--- a/package.json
+++ b/package.json
@@ -18,16 +18,28 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "astro": "5.14.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dexie": "^4.2.0",
     "diff": "^8.0.2",
     "fuse.js": "^7.1.0",
     "jszip": "^3.10.1",
-    "react-compiler-runtime": "^19.1.0-rc.3"
+    "lucide-react": "^0.544.0",
+    "react-compiler-runtime": "^19.1.0-rc.3",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@astrojs/react": "4.4.0",
     "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/dom": "^10.4.1",
@@ -51,6 +63,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   }
